page content no longer being cropped on PDP

--- a/src/components/ProductDesc/ProductImages.module.css
+++ b/src/components/ProductDesc/ProductImages.module.css
@@ -5,7 +5,6 @@
 
 .image-select-container {
   width: 100%;
-  overflow: hidden;
   margin-bottom: 40px;
   aspect-ratio: 1 / 1;
 }
@@ -18,7 +17,6 @@
 
 .main-image-container {
   width: 50%;
-  overflow: hidden;
 }
 
 .main-image-container img {
